fixed footer item overlap

--- a/style.css
+++ b/style.css
@@ -1677,6 +1677,7 @@ footer{
 		margin-top: 1.5rem;
 		flex-direction: column;
 		align-items: center;
+		height: auto;
 	}
 
 	.footer-contact-left{
